Add GA4 tracking (G-Z83460CGY6)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     })(window, document, 'script', 'dataLayer', 'GTM-53TBPPCQ');</script>
   <!-- End Google Tag Manager -->
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z83460CGY6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-Z83460CGY6');
+  </script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>맵맵맵 (MapMapMap) - 이젠 안 속는다 | 맵기 리뷰 기반 맛집 추천</title>
