--- a/public/mapbti.html
+++ b/public/mapbti.html
@@ -13,6 +13,15 @@
     })(window, document, 'script', 'dataLayer', 'GTM-53TBPPCQ');</script>
   <!-- End Google Tag Manager -->
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z83460CGY6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-Z83460CGY6');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MAP-BTI :: 32가지 미각 성향 정밀 진단 | 맵맵맵</title>
