--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -38,8 +38,6 @@
     fbq('init', '25503026785974137');
     fbq('track', 'PageView');
   </script>
-  <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=25503026785974137&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
 
   <meta charset="UTF-8" />
@@ -235,6 +233,10 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53TBPPCQ" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+
+  <!-- Meta Pixel (noscript) -->
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=25503026785974137&ev=PageView&noscript=1" /></noscript>
 
   <div class="noise"></div>
   <div id="root"></div>
